--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.url=jdbc:mysql://localhost:3306/task05
-spring.datasource.username=root
-spring.datasource.password=1
+spring.datasource.username=
+spring.datasource.password=
 
 #logging.level.root=WARN
 #spring.jpa.show-sql=true
